Membuat Fitur Scan

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.forgot_password.ForgotPasswordActivity">
 
     <!-- ScrollView with form content -->
@@ -79,17 +79,20 @@
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Send Reset Link Button -->
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/sendResetLinkButton"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:text="Ganti Password"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/rounded"
-                android:backgroundTint="@color/purple_200"
-                android:textColor="#FFF"
-                android:textStyle="bold" />
+                app:cornerRadius="10dp"
+                app:strokeWidth="2dp"
+                app:strokeColor="@color/green_light"
+                app:backgroundTint="@color/green_light"/>
+
         </LinearLayout>
     </ScrollView>
 
@@ -101,7 +104,7 @@
         android:visibility="gone"
         android:indeterminate="true"
         android:elevation="4dp"
-        android:indeterminateTint="@color/purple_200"
+        android:indeterminateTint="@color/green_light"
         android:layout_gravity="center" />
 
 </FrameLayout>
