--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:layout_centerInParent="true"
         android:visibility="gone"
         android:indeterminate="true"
-        android:indeterminateTint="@color/purple_200"
+        android:indeterminateTint="@color/green_light"
         android:elevation="4dp"/>
 
     <!-- ScrollView for login content -->
@@ -119,23 +119,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="lupa password"
-                android:textColor="@color/purple_200"
+                android:textColor="@color/green_light"
                 android:textStyle="bold"
                 android:layout_gravity="end"
                 android:layout_marginEnd="1dp"
                 android:layout_marginBottom="24dp" />
 
-            <!-- Login Button -->
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/loginButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:textSize="16sp"
                 android:text="login"
-                android:background="@drawable/rounded"
                 android:textColor="#FFF"
                 android:textStyle="bold"
-                android:layout_marginBottom="25dp" />
+                android:layout_marginBottom="25dp"
+                app:cornerRadius="10dp"
+                app:strokeWidth="2dp"
+                app:strokeColor="@color/green_light"
+                app:backgroundTint="@color/green_light"/>
+
 
             <!-- Divider for Google Sign-In (OR) with lines on both sides -->
             <LinearLayout
@@ -198,7 +201,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Register"
-                    android:textColor="@color/purple_200"
+                    android:textColor="@color/green_light"
                     android:layout_marginStart="3dp"
                     android:textStyle="bold" />
             </LinearLayout>
