--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/logoImage"
                 android:layout_width="300dp"
                 android:layout_height="200dp"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/logo"
                 android:layout_marginBottom="15dp"
                 android:contentDescription="ilustrasi" />
 
