--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -61,7 +61,7 @@
                     android:layout_weight="1"
                     android:layout_marginEnd="8dp"
                     android:textStyle="bold"
-                    android:text="Camera"
+                    android:text="Kamera"
                     app:cornerRadius="10dp"
                     app:icon="@drawable/ic_camera"
                     app:iconGravity="textStart"
@@ -78,7 +78,7 @@
                     android:layout_weight="1"
                     android:layout_marginStart="8dp"
                     android:textStyle="bold"
-                    android:text="Gallery"
+                    android:text="Galeri"
                     app:cornerRadius="10dp"
                     app:icon="@drawable/ic_gallery"
                     app:iconGravity="textStart"
