--- a/app/src/main/res/layout/item_scan.xml
+++ b/app/src/main/res/layout/item_scan.xml
@@ -117,7 +117,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hapus History"
+                android:text="Hapus Histori"
                 android:textColor="@color/red"
                 android:textStyle="bold"
                 android:layout_marginStart="8dp"/>
