--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -25,16 +25,16 @@
                 android:id="@+id/logoImage"
                 android:layout_width="300dp"
                 android:layout_height="200dp"
-                android:src="@drawable/logo"
+                android:src="@mipmap/forgot_password"
                 android:layout_marginBottom="15dp"
-                android:contentDescription="ilustrasi" />
+                android:contentDescription="@string/illustration" />
 
             <!-- Title -->
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lupa Password"
+                android:text="@string/forgot_password"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
@@ -56,7 +56,7 @@
                 android:id="@+id/tv_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
+                android:text="@string/email"
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_marginBottom="1dp"
@@ -83,7 +83,7 @@
                 android:id="@+id/sendResetLinkButton"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:text="Ganti Password"
+                android:text="@string/change_password"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
@@ -92,7 +92,6 @@
                 app:strokeWidth="2dp"
                 app:strokeColor="@color/green_light"
                 app:backgroundTint="@color/green_light"/>
-
         </LinearLayout>
     </ScrollView>
 
