--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,17 +24,17 @@
                 android:id="@+id/logoImage"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:src="@drawable/logo"
+                android:src="@mipmap/register"
                 android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
-                android:contentDescription="Ilustrasi"/>
+                android:contentDescription="@string/illustration"/>
 
             <!-- App Title -->
             <TextView
                 android:id="@+id/appTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Daftar"
+                android:text="@string/register"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp"
@@ -46,7 +46,7 @@
                 android:id="@+id/tv_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
+                android:text="@string/email"
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_marginBottom="1dp"
@@ -76,7 +76,7 @@
                 android:id="@+id/tv_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Password"
+                android:text="@string/password"
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_marginBottom="1dp"
@@ -106,7 +106,7 @@
                 android:id="@+id/tv_passwordConfirm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Konfirmasi Password"
+                android:text="@string/confirm_password"
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_marginBottom="1dp"
@@ -136,7 +136,7 @@
                 android:id="@+id/registerButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="Daftar"
+                android:text="@string/register"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
@@ -158,14 +158,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Apakah kamu sudah punya akun? "
+                    android:text="@string/have_account"
                     android:textColor="#000" />
 
                 <TextView
                     android:id="@+id/loginLink"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Login"
+                    android:text="@string/login"
                     android:textColor="#4CAF50"
                     android:layout_marginStart="3dp"
                     android:textStyle="bold" />
