--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:material="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- CardView 1 (Kiri) -->
     <androidx.cardview.widget.CardView
@@ -88,11 +89,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHistoryHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="280dp"
         android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_history"
         app:layout_constraintTop_toBottomOf="@id/card2"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal"/>
+        android:layout_marginBottom="16dp" />
 
     <!-- Floating Action Button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
