merapihkan home, detail history, hasil scan, settings

--- a/app/src/main/res/layout/activity_hasil_scan.xml
+++ b/app/src/main/res/layout/activity_hasil_scan.xml
@@ -1,48 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/white_secondary"
     android:layout_height="match_parent">
 
-    <!-- Bagian AppBar -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent">
 
-        <!-- MaterialToolbar -->
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topAppBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/green_light"
-            app:elevation="4dp"
-            app:layout_anchor="@+id/appBarLayout"
-            app:layout_anchorGravity="center"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp">
-
-            <!-- Kontainer untuk ikon dan teks -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
-
-                <!-- Teks judul -->
-                <TextView
-                    android:id="@+id/title_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Scan Result"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" /> <!-- Sesuaikan margin untuk jarak antara ikon dan teks -->
-
-            </LinearLayout>
-        </com.google.android.material.appbar.MaterialToolbar>
+            app:title="Scan Result"
+            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            app:titleTextColor="@color/white"
+            app:elevation="4dp"/>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -53,25 +31,23 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:layout_height="wrap_content">
 
-            <!-- Bagian gambar dan judul tetap sama -->
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/result_image_card"
+                android:id="@+id/history_image_card"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="16dp"
                 app:cardCornerRadius="20dp"
-                app:cardElevation="12dp"
                 app:strokeWidth="0dp"
+                android:layout_margin="16dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
 
                 <ImageView
-                    android:id="@+id/result_image"
+                    android:id="@+id/history_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
@@ -85,25 +61,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/result_image_card"
+                app:layout_constraintTop_toBottomOf="@id/history_image_card"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <!-- Bagian container hasil -->
             <LinearLayout
-                android:id="@+id/result_container"
+                android:id="@+id/history_container"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="visible"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/result_image_card"
+                app:layout_constraintTop_toBottomOf="@id/history_image_card"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
 
-                <!-- Bagian judul dan deskripsi tetap sama -->
                 <TextView
-                    android:id="@+id/result_title"
+                    android:id="@+id/history_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="24sp"
@@ -111,21 +85,88 @@
                     android:textAlignment="center"
                     tools:text="Apple Classification"/>
 
-                <TextView
-                    android:id="@+id/confidence_text"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textColor="#4A5568"
-                    android:textAlignment="center"
+                    android:orientation="vertical"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="16dp"
-                    tools:text="Confidence: 95.5%"/>
+                    android:paddingHorizontal="16dp">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Confidence: "
+                            android:textStyle="bold"
+                            android:textSize="14sp"
+                            android:textColor="#4A5568"/>
+
+                        <TextView
+                            android:id="@+id/confidence_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+                            android:textColor="#4A5568"
+                            tools:text="95.5%"/>
+                    </LinearLayout>
+
+                    <ProgressBar
+                        android:id="@+id/confidence_progress_bar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="12dp"
+                        android:layout_marginTop="4dp"
+                        android:progress="50"
+                        android:progressDrawable="@drawable/confidence_gradient"
+                        android:max="100"/>
+                </LinearLayout>
+
+                <!-- Card for Deskripsi -->
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardCornerRadius="16dp"
-                    app:cardElevation="8dp"
+                    android:layout_marginBottom="16dp"
+                    app:cardBackgroundColor="#FFFFFF">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="16dp"> <!-- Same padding as Saran card -->
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Deskripsi"
+                            android:textStyle="bold"
+                            android:textSize="18sp"
+                            android:layout_marginBottom="5dp"
+                            android:textColor="#2D3748" />
+
+                        <TextView
+                            android:id="@+id/history_description"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="16sp"
+                            android:justificationMode="inter_word"                            android:layout_margin="1dp"
+                            android:textColor="#4A5568"
+                            tools:text="Detailed description of the classification and its unique characteristics."
+                            android:layout_marginBottom="16dp"/> <!-- Same margin as Saran card -->
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+
+                <!-- Card for Saran -->
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     app:cardBackgroundColor="#FFFFFF">
 
@@ -138,49 +179,19 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Deksirpsi"
-                            android:textSize="18sp"
-                            android:textColor="#2D3748"
-                            android:layout_marginBottom="8dp"/>
-
-                        <TextView
-                            android:id="@+id/result_description"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textSize="16sp"
-                            android:textColor="#4A5568"
-                            tools:text="Detailed description of the classification and its unique characteristics."/>
-                    </LinearLayout>
-                </com.google.android.material.card.MaterialCardView>
-
-                <!-- Kartu suggestion dan medicine -->
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/suggestion_card"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    app:cardCornerRadius="16dp"
-                    app:cardElevation="8dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
                             android:text="Saran"
+                            android:textStyle="bold"
                             android:textSize="18sp"
                             android:textColor="#2D3748"
-                            android:layout_marginBottom="8dp"/>
+                            android:layout_marginBottom="5dp"/>
 
                         <TextView
                             android:id="@+id/suggestion_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textSize="14sp"
+                            android:textSize="16sp"
+                            android:justificationMode="inter_word"                            android:layout_margin="1dp"
+
                             android:textColor="#4A5568"
                             tools:text="Personalized care tips and recommendations."/>
                     </LinearLayout>
@@ -198,5 +209,4 @@
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
