--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
                 android:id="@+id/card1"
                 android:layout_width="0dp"
                 android:layout_height="130dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
                 app:cardCornerRadius="12dp"
@@ -91,7 +91,8 @@
                 android:id="@+id/card2"
                 android:layout_width="0dp"
                 android:layout_height="130dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="4dp"
+                android:paddingStart="4dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="4dp"
                 app:cardCornerRadius="12dp"
@@ -166,19 +167,12 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewHistoryHorizontal"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
+                android:layout_height="180dp"
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal"
-                android:paddingBottom="20dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_history"
                 app:layout_constraintTop_toBottomOf="@id/historyHeaderLayout" />
-
-            <!-- Spacer agar ada ruang bawah jika tambah konten -->
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                app:layout_constraintTop_toBottomOf="@id/recyclerViewHistoryHorizontal" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
