--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -1,11 +1,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="260dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="8dp"
-    app:cardUseCompatPadding="true"
-    app:cardBackgroundColor="@android:color/white"> <!-- Gunakan app:cardBackgroundColor, bukan android:cardBackgroundColor -->
+    android:layout_width="160dp"
+    android:layout_height="160dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
+    app:cardBackgroundColor="@android:color/white"
+    app:cardCornerRadius="16dp">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -14,23 +14,23 @@
         <ImageView
             android:id="@+id/imageStory"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="130dp"
             android:layout_gravity="top"
-            android:src="@drawable/logo"
+            android:contentDescription="Story Image"
             android:scaleType="centerCrop"
-            android:contentDescription="Story Image" />
+            android:src="@drawable/logo" />
 
         <TextView
             android:id="@+id/textStory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Story Title"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColor="@color/black_hint"
-            android:textSize="18sp"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="35dp" />
+            android:layout_marginBottom="7dp"
+            android:text="Lorem Ipsum dolor"
+            android:textAlignment="center"
+            android:textColor="@color/black_hint"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </FrameLayout>
 </androidx.cardview.widget.CardView>
